--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Page Title</title>
+    <link rel="stylesheet" href="main.css"/>
+    <script src="main.js"></script>
+    <title>Hello World Page</title>
 </head>
+
 <body>
 
-<h1>Paula's First Heading</h1>
-<p>My first paragraph.</p>
+    <h1>Hello World</h1>
+    <p>My first paragraph.</p>
 
 </body>
+
 </html>
