tema-1 new push

--- a/tema-1/index.html
+++ b/tema-1/index.html
@@ -4,14 +4,12 @@
 <head>
     <link rel="stylesheet" href="main.css"/>
     <script src="main.js"></script>
-    <title>Hello World Page</title>
+    <title>Tema-1</title>
 </head>
 
 <body>
-
-    <h1>Hello World</h1>
-    <p>My first paragraph.</p>
-    <a href="home.html">To the home page</a>
+    <h3>Paula Cobzaru</h3>    
+    <a href="town.html">To my town page</a>
 
 </body>
 
