--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <p>My first paragraph.</p>
     <a href="home.html">To the home page</a>
 
+    <p>Teme curs</p>
+    <a href="/tema-1/index.html">Tema-1></a>
+
 </body>
 
 </html>
