--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="home.html">To the home page</a>
 
     <p>Teme curs</p>
-    <a href="/tema-1/index.html">Tema-1></a>
+    <a href="/tema-1/index.html">Tema-1</a>
 
 </body>
 
