--- a/tema-1/index.html
+++ b/tema-1/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h3>Paula Cobzaru</h3>    
+    <h3 id="name">Paula Cobzaru</h3>    
     <a href="town.html">To my town page</a>
 
 </body>
