--- a/tema-1/town.html
+++ b/tema-1/town.html
@@ -8,25 +8,23 @@
 </head>
 
 <body id="new">
+    <br>
     <h2>Iassy</h2>
-    <img src="C:\tema-curs\tema-1\Iassy-photo.png" alt="Iassy-photo" class="imagine">
-    <br>
-    <br>
-    <br>
+    <img src="Iassy-photo.png" alt="Iassy-photo" class="imagine">
     <script>
         var param = document.createElement("h3");
         param.setAttribute('id', 'my-id');
         var node = document.createTextNode("This is the town where I live in the present.");
         param.append(node);
-        var element = document.getElementById("new");
+        var element document.getElementById("new");
         element.appendChild(param);
     </script>
     <br>
     <p><b>Click the button to open a new browser window.</b></p>
-    <button onclick="myFunction()">Open my town page</button>
+    <button onclick="myFunction()">Click here</button>
     <script>
         function myFunction() {
-            window.open("town.html");
+            alert("Iassy");
         }
     </script>
 
