--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="main.css" />
     <script src="main.js"></script>
     <title>Hello World Page</title>
 </head>
@@ -10,11 +10,83 @@
 <body>
 
     <h1>Hello World</h1>
-    <p>My first paragraph.</p>
-    <a href="home.html">To the home page</a>
+    <div>
+        <p>
+            <strong style="font-size: 40px">
+                My first paragraph.
+            </strong>
+        </p>
+        <a href="home.html">To the home page</a>
+        <div id="theMenu" class="list menuContainer">
+            <span>The home page</span>
+            <span>Second page</span>
+            <span>Third page</span>
+        </div>
 
-    <p>Teme curs</p>
-    <a href="tema-1/index.html">Tema-1</a>
+        <div class="parentTestDiv">
+            <div class="childTestDiv">
+                123
+            </div>
+        </div>
+
+        <div class="parentTestDiv">
+            <div class="childTestDiv">
+                123
+            </div>
+        </div>
+
+    </div>
+    <p><strong style="font-size: 40px;">Teme curs</strong></p>
+    <div class="flex-container">
+        <a id="teme" href="tema-1/index.html">
+            <div type="checkbox" class="home">Tema 1</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 2</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 3</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 4</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 5</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 6</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 7</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 8</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 9</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 10</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 11</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 12</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 13</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 14</div>
+        </a>
+        <a id="teme" href="">
+            <div type="checkbox" class="home">Tema 15</div>
+        </a>
+    </div>
+
+
+
 
 </body>
 
