--- a/index.html
+++ b/index.html
@@ -16,23 +16,10 @@
                 My first paragraph.
             </strong>
         </p>
-        <a href="home.html">To the home page</a>
         <div id="theMenu" class="list menuContainer">
-            <span>The home page</span>
-            <span>Second page</span>
-            <span>Third page</span>
-        </div>
-
-        <div class="parentTestDiv">
-            <div class="childTestDiv">
-                123
-            </div>
-        </div>
-
-        <div class="parentTestDiv">
-            <div class="childTestDiv">
-                123
-            </div>
+            <a href="home.html">The home page</a>
+            <a href="second.html">Second page</a>
+            <a href="third.html">Third page</a>
         </div>
 
     </div>
