--- a/index.html
+++ b/index.html
@@ -8,22 +8,7 @@
 </head>
 
 <body>
-
-    <h1>Hello World</h1>
-    <div>
-        <p>
-            <strong style="font-size: 40px">
-                My first paragraph.
-            </strong>
-        </p>
-        <div id="theMenu" class="list menuContainer">
-            <a href="home.html">The home page</a>
-            <a href="second.html">Second page</a>
-            <a href="third.html">Third page</a>
-        </div>
-
-    </div>
-    <p><strong style="font-size: 40px;">Teme curs</strong></p>
+    <h1 style="font-size: 40px;">Teme curs</h1>
     <div class="flex-container">
         <a id="teme" href="tema-1/index.html">
             <div type="checkbox" class="home">Tema 1</div>
