--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a id="teme" href="tema-1/index.html">
             <div type="checkbox" class="home">Tema 1</div>
         </a>
-        <a id="teme" href="">
+        <a id="teme" href="tema-2/index.html">
             <div type="checkbox" class="home">Tema 2</div>
         </a>
         <a id="teme" href="">
