--- a/tema-2/index.html
+++ b/tema-2/index.html
@@ -7,78 +7,107 @@
     <title>Tema-2</title>
 </head>
 
-<body>
-    <div style="display:inline-block;vertical-align:top;">
-        <img src="Paula.jpg" alt="MyPhoto">
-    </div>
-    <div style="display:inline-block;">
-        <h2>
-            Resume
-        </h2>
-    </div>
+<body style="padding: 15%">
     <div>
-        <p style="margin-left: 20px;">
-            <bold>I am very passionate about software development.</bold>
-            <br>
-            <bold>Due to the courses in software development and my experience in accounting and finance,
-                I have acquired technical knowledge and soft skills, as well as practical and business skills.</bold>
-            <br>
-            <bold>My purpose is to swap gradually from accounting to software development, as I am always enthusiastic
-                to
-                learn and undertake new challenges.
-            </bold>
-        </p>
-    </div>
-
-    <br>
-    <div style="display:inline-block;vertical-align:top;">
-        <img class="type" src="PersonalDetails.png" alt="PersonalDetails">
-    </div>
-    <div style="display:inline-block;">
-        <h3>
-            Personal details
-        </h3>
+        <div style="display:inline; vertical-align:top;">
+            <img id="photo" src="Paula.jpg" alt="MyPhoto">
+            <h1 id="text" style="font-size: xx-large; font-family: fantasy; text-align: center;">
+                Resume
+            </h1>
+        </div>
+        <br>
+        <br>
         <div>
+            <div style="display:block; font-size: large; font-family: fantasy; background-color: lightgrey;">
+                <h2>
+                    Paula Cobzaru
+                </h2>
+            </div>
             <p style="margin-left: 20px;">
-                <bold>35A Vasile Lupu Street, Iasi, Romania, 700350</bold>
-                <br>
-                <bold>0040751210514, 00447399811294</bold>
-                <br>
-                <bold>PAULACOBZARU@YAHOO.COM
-                </bold>
+                <strong>I am very passionate about software development.<strong>
+                        <br>
+                        <br>
+                        <strong>Due to the courses in software development and my experience in accounting and
+                            finance,<br>
+                            I have acquired technical knowledge and soft skills, <br>as well as practical and business
+                            skills.</strong>
+                        <br>
+                        <br>
+                        <strong>My purpose is to swap gradually from accounting to software development, <br>as I am
+                            always
+                            enthusiastic to learn and undertake new challenges.
+                        </strong>
             </p>
         </div>
     </div>
     <br>
-    <div style="display:inline-block;vertical-align:top;">
-        <img class="type" src="SoftSkills.png" alt="SoftSkills">
-        <div style="display:inline-block;">
-            <h3>
-                Soft skills
-            </h3>
-            <div>
-                <p style="margin-left: 20px;">
-                <ul>
-                    <bold>Excellent customer service</bold>
-                    <br>
-                    <bold>Communication skills</bold>
-                    <br>
-                    <bold>Flexible, reliable and adaptable</bold>
-                    <br>
-                    <bold>Strong managerial and leadership qualities</bold>
-                    <br>
-                    <bold>Mentoring and training, supportive member of the team</bold>
-                    <br>
-                    <bold>Romanian an English speaking/bold>
-                </ul>
-                </p>
+
+    <div>
+        <div>
+            <div style=" display: block; back-ground: lightgrey;">
+                <img id="details" src="PersonalDetails.png" alt="PersonalDetails">
+                <h3><strong>
+                        Personal details
+                    </strong>
+                </h3>
             </div>
+            <ul style="margin-left: 20px;">
+                <li><strong>35A Vasile Lupu Street, Iasi, Romania, 700350</strong></li>
+                <br>
+                <li><strong>0040751210514, 00447399811294</strong></li>
+                <br>
+                <li><strong>PAULACOBZARU@YAHOO.COM</strong></li>
+            </ul>
         </div>
     </div>
 
+
     <br>
-    <div style="display:inline-block;vertical-align:top;">
-        <img class="type" src="Monitor.png" alt="Monitor">
+    <div>
+        <div>
+            <div style="display: block; background-color: lightgrey;>
+            <img id="details" src="SoftSkills.png" alt="SoftSkills">
+            </div>
+            <div style="display:inline-block;">
+                <h3><strong>
+                        Soft skills
+                </h3>
+                </strong>
+            </div>
+            <div>
+                <ul style="margin-left: 20px;">
+                    <li>
+                        <bold> Excellent customer service</bold>
+                    </li>
+                    <br>
+                    <li>
+                        <bold> Communication skills</bold>
+                    </li>
+                    <br>
+                    <li>
+                        <bold> Flexible, reliable and adaptable</bold>
+                    </li>
+                    <br>
+                    <li>
+                        <bold> Strong managerial and leadership qualities</bold>
+                    </li>
+                    <br>
+                    <li>
+                        <bold> Mentoring and training, supportive member of the team</bold>
+                    </li>
+                    <br>
+                    <li>
+                        <bold> Romanian an English speaking/bold></bold>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <br>
+    <div style="display:block; background-color: lightgrey;>
+        <img id="details" src="Monitor.png" alt="Monitor">
     </div>
     <div style="display:inline-block;">
         <h3>
@@ -86,153 +115,159 @@
         </h3>
     </div>
     <div>
-        <p>
+        <p id="techs">
             <bold>Python, Java, Jasper Reports, Data Science, Machine Learning</bold>
         </p>
     </div>
 
     <br>
-    <div style="display:inline-block;vertical-align:top;">
-        <img class="type" src="WorkExperience.png" alt="WorkExperience">
-    </div>
-    <div style="display:inline-block;">
-        <h3>
-            Work experience
-        </h3>
-    </div>
     <div>
-        <p>
-            <bold>Learning SS SRL, Iasi, Romania - Freelancer</bold>
-        </p>
-        <p style="text-align:right">Jan 2021 – present </p>
-        <ul>
-            <li>
-                I am working on personal projects, using technologies like WordPress, JavaScript or Python
-            </li>
-        </ul>
-
-        <p>
-            <bold>Expertcont PC SRL, Iasi, Romania - CEO and Founder</bold>
-        </p>
-        <p style="text-align:right">Oct 2012 – Sept 2020 </p>
-        <ul>
-            <li>
-                Consultancy in accounting, tax and finance
-            </li>
-            <li>
-                Providing team management for punctual delivery of workload
-            </li>
-            <li>
-                Tens of accounting expertise for the Romanian Justice court and Economic Police
-            </li>
-            <li>
-                Tens of clients in the field of accountancy, human resources and business analysis
-            </li>
-        </ul>
-
-        <p>
-            <bold>Euromarket WWE SRL, Iasi, Romania - Financial Manager</bold>
-        </p>
-        <p style="text-align:right">Jan 2007 – Sept 2012 </p>
-        <ul>
-            <li>
-                Accountancy, tax and financial supervisor
-            </li>
-            <li>
-                One-to-one mentoring to a team of accountants
-            </li>
-            <li>
-                Undertaking management analysis for the mother company based in Cyprus
-            </li>
-        </ul>
-
-        <p>
-            <bold>Etta Auto SRL, Iasi, Romania - Financial Manager</bold>
-        </p>
-        <p style="text-align:right">Aug 2002 – Dec 2006</p>
-        <ul>
-            <li>
-                Supervising the accounting, tax and financial department, especially payrolls, assets, suppliers and
-                customer accounts
-            </li>
-        </ul>
-
-    </div>
-
-
-    <br>
-    <div style="display:inline-block;vertical-align:top;">
-        <img class="type" src="Study.png" alt="Study">
-    </div>
-    <div style="display:inline-block;">
-        <h3>
-            Education
-        </h3>
-    </div>
-    <div>
-        <p>
-            <strong>IT Factory - Bootcamp Bucharest, Romania - Student</strong>
-        </p>
-        <p style="text-align:right">April 2022 – present</p>
-        <p>
-            Online JavaScript programming course
-        </p>
-
-        <div>
-            <p><strong>
-                    Postgraduate AI and ML – Simplilearn - Student
-                </strong>
-            </p>
-            <p style="text-align:right">Oct 2021 – present</p>
-            <p>
-                Online student in Data Science, Machine Learning and Artificial Intelligence
-            </p>
-
+        <div style="display: block; background-color: lightgrey;">
+            <img id="details" src="WorkExperience.png" alt="WorkExperience">
+            <h3 style="display: inline-block;">
+                Work experience
+            </h3>
         </div>
 
         <div>
-            <p>
-                <strong>IT Factory - Bootcamp Bucharest, Romania - Student</strong>
-            </p>
-            <p style="text-align:right">April 2022 – present</p>
-            <p>
-                Online JavaScript programming course
-            </p>
+            <span style="text-align: left;">- Learning SS SRL, Iasi, Romania - Freelancer</span>
+            <span style="float:right">Jan 2021 - present </span>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    I am working on personal projects.
+                </li>
+                <li>
+                    I am using technologies like WordPress, JavaScript or Python.
+                </li>
+            </ul>
+            <br>
 
             <div>
-                <p><strong>
-                        Software Development Academy - Software developer
-                    </strong>
-                </p>
-                <p style="text-align:right">Oct 2021 – present</p>
-                <p>
-                    Online student in Data Science, Machine Learning and Artificial Intelligence
-                </p>
+                <span style="text-align: left;">- Expertcont PC SRL, Iasi, Romania - CEO and Founder</span>
+                <span style="float:right">Oct 2012 - Sept 2020 </span>
             </div>
+            <div>
+                <ul>
+                    <li>
+                        Consultancy in accounting, tax and finance
+                    </li>
+                    <li>
+                        Providing team management for punctual delivery of workload
+                    </li>
+                    <li>
+                        Tens of accounting expertise for the Justice court and Police
+                    </li>
+                    <li>
+                        Tens of clients in accountancy, HR and business analysis
+                    </li>
+                </ul>
+            </div>
+            <br>
 
             <div>
-                <p><strong>
-                    University Alexandru Ioan Cuza - Elitec, Iasi  -  MBA                      
-                    </strong>
-                </p>
-                <p style="text-align:right">Oct 2003 – Feb 2005</p>
-                <p>
-                    MBA in international business and economics (English and Romanian)
-                </p>
+                <span style="text-align: left;">- Euromarket WWE SRL, Iasi, Romania - Financial Manager</span>
+                <span style="float:right">Jan 2007 - Sept 2012 </span>
             </div>
+            <ul>
+                <li>
+                    Accountancy, tax and financial supervisor
+                </li>
+                <li>
+                    One-to-one mentoring to a team of accountants
+                </li>
+                <li>
+                    Undertaking management analysis for the mother company from Cyprus
+                </li>
+            </ul>
+            <br>
 
             <div>
-                <p><strong>
-                    University Alexandru Ioan Cuza, Iasi  - Bachelor's Degree	                  
-                    </strong>
-                </p>
-                <p style="text-align:right">Oct 1997 - Sept 2001</p>
-                <p>
-                    Specializing in accountancy/finance and informatics for economics
-                </p>
+                <span style="text-align: left;">- Etta Auto SRL, Iasi, Romania - Financial Manager</span>
+                <span style="float:right">Aug 2002 - Dec 2006 </span>
             </div>
+            <ul>
+                <li>
+                    Supervising the accounting, tax and financial department.
+                </li>
+                <li>
+                    Main duties to supervise: payrolls, assets, suppliers and customer accounts
+                </li>
+            </ul>
 
         </div>
+
+
+        <br>
+        <div style="display:inline-block; background-color: lightgrey;">
+            <img id="details" src="Study.png" alt="Study">
+        </div>
+        <div style="display:inline-block;">
+            <h3>
+                Education
+            </h3>
+        </div>
+
+        <div>
+            <dl>
+                <span style="text-align: left;">IT Factory - Bootcamp Bucharest, Romania - Student</span>
+                <span style="float:right">April 2022 – present</span>
+            </dl>
+            <dd>
+                <p>
+                    ● Online JavaScript programming course
+                </p>
+        </div>
+
+        <div>
+            <dl>
+                <span style="text-align: left;">Postgraduate AI and ML – Simplilearn - Student</span>
+                <span style="float:right">Oct 2021 – present</span>
+            </dl>
+            <dd>
+                <p>
+                    ● Online student in Data Science, Machine Learning and Artificial Intelligence
+                </p>
+            </dd>
+        </div>
+
+        <div>
+            <dl>
+                <span style="text-align: left;">Software Development Academy - Software developer</span>
+                <span style="float:right">Oct 2021 – present</span>
+            </dl>
+            <dd>
+                <p>
+                    ● Online Java Programming Bootcamp: MySQL Database, JDBC, Hibernate, Angular
+                </p>
+            </dd>
+        </div>
+
+        <div>
+            <dl>
+                <span style="text-align: left;">University Alexandru Ioan Cuza - Elitec, Iasi - MBA</span>
+                <span style="float:right">Oct 2003 – Feb 2005</span>
+            </dl>
+            <dd>
+                <p>
+                    ● MBA in international business and economics (English and Romanian)
+                </p>
+            </dd>
+        </div>
+
+        <div>
+            <dl>
+                <span style="text-align: left;">University Alexandru Ioan Cuza, Iasi - Bachelor's Degree</span>
+                <span style="float:right">Oct 1997 - Sept 2001</span>
+            </dl>
+            <dd>
+                <p>
+                    ● Specializing in accountancy/finance and informatics for economics
+                </p>
+            </dd>
+        </div>
+    </div>
 
 
 
