new change homework2

--- a/tema-2/index.html
+++ b/tema-2/index.html
@@ -8,8 +8,6 @@
 </head>
 
 <body style="margin-left: 150px; margin-top: 30px; margin-right: 150px; margin-bottom: 30px;">
-    <br>
-    <br>
     <div>
         <div style="display: inline">
             <h1>
@@ -17,7 +15,6 @@
                 <p style="margin: 30px;">Paula Cobzaru</p>
             </h1>
         </div>
-        <br>
         <div class="subtitle">
             <p style=><strong>
                     I am very passionate about software development.
@@ -30,7 +27,6 @@
                 </strong>
             </p>
         </div>
-        <br>
         <div style="display: inline;">
             <h2 class="elements">
                 <img id="details" style="margin: 10px;" src="PersonalDetails.png" alt="PersonalDetails">
@@ -95,9 +91,32 @@
                     Learning how to use Java or Python for Data Science, JavaScript
                 </li>
             </ul>
-            <br>
         </div>
 
+        <div>
+            <bold>
+                <span class="role" style="text-align: left;">Receptionist</span>
+                <br>
+                <span class="company" style="text-align: left;">Grand Hotel Scarborough, United Kingdom</span>
+                <span class="years" style="float:right">Nov 2021 - Nov 2022</span>
+            </bold>
+        </div>
+        <div>
+            <p>
+                I worked as a Receptionist at the biggest hotel from Europe built in 1883, that hosted Queen Elisabeth,
+                Winston Churchill, other known artists and stars of the UK and of the world.
+            </p>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    Give information and help to the potential and current customers of the hotel
+                </li>
+                <li>
+                    Making the required forms for the clients’ accomodations
+                </li>
+            </ul>
+        </div>
 
         <div>
             <bold>
@@ -131,7 +150,6 @@
                     Tens of clients in accountancy, HR and business analysis
                 </li>
             </ul>
-            <br>
         </div>
 
         <div>
@@ -164,10 +182,8 @@
                         Different financial analysis, like cash-flows, revenues and cost reports
                     </li>
                 </ul>
-                <br>
             </div>
             </span>
-            </bold>
         </div>
 
         <div>
@@ -194,7 +210,6 @@
                         Main duties to supervise: payrolls, assets, suppliers and customer accounts
                     </li>
                 </ul>
-                <br>
             </div>
             <div style="display: inline; transition: font-size 3s;">
                 <h2 class="elements">
@@ -212,8 +227,10 @@
                 <div>
                     <p>
                         I am studying on-line JavaScript with HTML5 and CSS3, in a class of only 9 people,
-                        in order to get skilss in the front-end software development area and become a Junior web developer.
-                        In the end I will have a portofolio on GitHub and take a final exam with the National Authority for Qualifications.
+                        in order to get skilss in the front-end software development area and become a Junior web
+                        developer.
+                        In the end I will have a portofolio on GitHub and take a final exam with the National Authority
+                        for Qualifications.
                     </p>
                 </div>
             </div>
@@ -223,13 +240,15 @@
                     <span class="edu" style="text-align: left;">Student</span>
                     <span class="years" style="float:right">October 2021 - present</span>
                     <br>
-                    <span class="studying" style="text-align: left;">Simplilearn in association with Perdue University USA and IBM</span>
+                    <span class="studying" style="text-align: left;">Simplilearn in association with Perdue University
+                        USA and IBM</span>
                 </bold>
                 <div>
                     <p>
-                        Post Graduate Program in AI and Machine Learning, 
-                        which means an on-line very intensive course lasting one year, 
-                        studying Data Science, Machine Learning, Deep Learning, Reinforcement Learning and Artificial Intelligence with Python, 
+                        Post Graduate Program in AI and Machine Learning,
+                        which means an on-line very intensive course lasting one year,
+                        studying Data Science, Machine Learning, Deep Learning, Reinforcement Learning and Artificial
+                        Intelligence with Python,
                         in order to become an engineer in either of these fields.
                     </p>
                 </div>
@@ -244,10 +263,11 @@
                 </bold>
                 <div>
                     <p>
-                        Online Java Programming Bootcamp, studying java as the main programming language, 
+                        Online Java Programming Bootcamp, studying java as the main programming language,
                         structured databases with MySQL Database or frameworks as JDBC, Hibernate, Thymeleaf, Angular.
-                        For the final project Online Invoicing I studied by myself BootStrap for the front-end design and JasperReports for printing the reports of the application.
-                        This app is on my GitHub account and was aimed to be designed for the final exam 
+                        For the final project Online Invoicing I studied by myself BootStrap for the front-end design
+                        and JasperReports for printing the reports of the application.
+                        This app is on my GitHub account and was aimed to be designed for the final exam
                         with the National Authority for Qualifications.
                     </p>
                 </div>
@@ -258,7 +278,8 @@
                     <span class="edu" style="text-align: left;">Postgraduate</span>
                     <span class="years" style="float:right">October 2005 - July 2007</span>
                     <br>
-                    <span class="studying" style="text-align: left;">University Alexandru Ioan Cuza, Iasi, Romania</span>
+                    <span class="studying" style="text-align: left;">University Alexandru Ioan Cuza, Iasi,
+                        Romania</span>
                 </bold>
                 <div>
                     <p>
@@ -266,13 +287,14 @@
                     </p>
                 </div>
             </div>
-            
+
             <div>
                 <bold>
                     <span class="edu" style="text-align: left;">Bachelor Degree</span>
                     <span class="years" style="float:right">October 1997 - July 2001</span>
                     <br>
-                    <span class="studying" style="text-align: left;">University Alexandru Ioan Cuza - Elitec, Iasi, Romania</span>
+                    <span class="studying" style="text-align: left;">University Alexandru Ioan Cuza - Elitec, Iasi,
+                        Romania</span>
                 </bold>
                 <div>
                     <p>
@@ -280,21 +302,18 @@
                     </p>
                 </div>
             </div>
-
-            <div>
-
-            </div>
-
         </div>
-                <bold>
-                    <span class="edu" style="text-align: left;">Other courses and specializations</span>
-                    <span class="years" style="float:right">2006 - present</span>
-                    <br>
-                    <ul>
-                        <li>Association of Chartered Certified Accountants - charter accountant</li>
-                        <li>Training Cariere SRL - professional coach</li>
-                        <li>Udemy - on-line course in Python</li>
-                </bold>
+        <div>
+            <bold>
+                <span class="edu" style="text-align: left;">Other courses and specializations</span>
+                <span class="years" style="float:right">2006 - present</span>
+                <br>
+                <ul>
+                    <li>Association of Chartered Certified Accountants - charter accountant</li>
+                    <li>Training Cariere SRL - professional coach</li>
+                    <li>Udemy - on-line course in Python</li>
+            </bold>
+        </div>
 </body>
 
 </html>
