tema3-1st-commit

--- a/tema-2/index.html
+++ b/tema-2/index.html
@@ -29,10 +29,10 @@
             </p>
         </div>
         <div style="display: inline;">
-            <h2 class="elements">
+            <h3 class="elements">
                 <img id="details" style="margin: 10px;" src="PersonalDetails.png" alt="PersonalDetails">
                 <p style="margin: 10px;">Paula Cobzaru</p>
-            </h2>
+            </h3>
             <div>
                 <table style="width:100%">
                     <tr>
@@ -60,10 +60,10 @@
         </div>
 
         <div style="display: inline; transition: font-size 3s;">
-            <h2 class="elements">
+            <h3 class="elements">
                 <img id="details" style="margin: 10px;" src="WorkExperience.png" alt="WorkExperience">
                 <p style="margin: 10px;">Work experience</p>
-            </h2>
+            </h3>
         </div>
         <div>
             <bold>
@@ -76,8 +76,7 @@
         <div>
             <p>
                 I am using a range of languages and frameworks in order to build projects together with a Senior
-                software developer. I am doing my
-                apprenticeship, helping him in to hiw own prejects.
+                software developer. I am doing my apprenticeship in software programming, helping him in his projects.
             </p>
         </div>
         <div>
@@ -213,10 +212,10 @@
                 </ul>
             </div>
             <div style="display: inline; transition: font-size 3s;">
-                <h2 class="elements">
+                <h3 class="elements">
                     <img id="details" style="margin: 10px;" src="Study.png" alt="Education">
                     <p style="margin: 10px;">Education and training</p>
-                </h2>
+                </h3>
             </div>
             <div>
                 <bold>
@@ -310,7 +309,7 @@
                 <span class="years" style="float:right">2006 - present</span>
                 <br>
                 <ul>
-                    <li>Association of Chartered Certified Accountants - charter accountant</li>
+                    <li>Association of Chartered Certified Accountants - chartered accountant</li>
                     <li>Training Cariere SRL - professional coach</li>
                     <li>Udemy - on-line course in Python</li>
             </bold>
