--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a id="teme" href="tema-2/index.html">
             <div type="checkbox" class="home">Tema 2</div>
         </a>
-        <a id="teme" href="">
+        <a id="teme" href="tema-3/index.html">
             <div type="checkbox" class="home">Tema 3</div>
         </a>
         <a id="teme" href="">
