--- a/tema-3/index.html
+++ b/tema-3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        //<link rel="stylesheet" href="main.css" />
+        <!-- <link rel="stylesheet" href="main.css" />-->
         <script defer src="main.js"></script>
         <title>Tema-3</title>
     </head>
