--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a id="teme" href="tema-3/index.html">
             <div type="checkbox" class="home">Tema 3</div>
         </a>
-        <a id="teme" href="">
+        <a id="teme" href="tema-4/index.html">
             <div type="checkbox" class="home">Tema 4</div>
         </a>
         <a id="teme" href="">
