--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a id="teme" href="tema-4/index.html">
             <div type="checkbox" class="home">Tema 4</div>
         </a>
-        <a id="teme" href="">
+        <a id="teme" href="tema-5/index.html">
             <div type="checkbox" class="home">Tema 5</div>
         </a>
         <a id="teme" href="">
