--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a id="teme" href="tema-5/index.html">
             <div type="checkbox" class="home">Tema 5</div>
         </a>
-        <a id="teme" href="">
+        <a id="teme" href="tema-6/index.html">
             <div type="checkbox" class="home">Tema 6</div>
         </a>
         <a id="teme" href="">
