--- a/tema-5/index.html
+++ b/tema-5/index.html
@@ -38,5 +38,11 @@
             5.6 Spune-mi despre tine.
         </p>
     </div>
+
+    <div id="5.7">
+        <p>
+            5.7 Chain functions
+        </p>
+    </div>
     
 </body>
