--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a id="teme" href="tema-6/index.html">
             <div type="checkbox" class="home">Tema 6</div>
         </a>
-        <a id="teme" href="">
+        <a id="teme" href="tema-7/index.html">
             <div type="checkbox" class="home">Tema 7</div>
         </a>
         <a id="teme" href="">
