--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a id="teme" href="tema-7/index.html">
             <div type="checkbox" class="home">Tema 7</div>
         </a>
-        <a id="teme" href="">
+        <a id="teme" href="tema-8/launchbutton.html">
             <div type="checkbox" class="home">Tema 8</div>
         </a>
         <a id="teme" href="">
