--- a/tema-8/launchbutton.html
+++ b/tema-8/launchbutton.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-    <script defer src="launchbutton.css"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="main.js"></script>
+    
     <title>Tema-8</title>
 </head>
 
-<body style="height: 100hv">
-    <div class="container d-flex justify-content-center align-items-center">
-        <div class="col-sm-12 my-auto">
-            <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
-                Launch
-            </button>
-        </div>
+<body>
+    <div>
+        <button type="button" class="launchButton btn btn-primary" onclick="location.href='table.html'">
+            Launch
+        </button>
     </div>
 </body>
 
