Small fix home 8

--- a/tema-8/table.html
+++ b/tema-8/table.html
@@ -25,6 +25,7 @@
                     <th scope="col">Name</th>
                     <th scope="col">Agency</th>
                     <th scope="col">Status</th>
+                    <th scope="col">Wikipedia link</th>
                 </tr>
             </thead>
             <tbody>
