--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a id="teme" href="tema-8/launchbutton.html">
             <div type="checkbox" class="home">Tema 8</div>
         </a>
-        <a id="teme" href="">
+        <a id="teme" href="tema-9/date.html">
             <div type="checkbox" class="home">Tema 9</div>
         </a>
         <a id="teme" href="">
