--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a id="teme" href="tema-9/date.html">
             <div type="checkbox" class="home">Tema 9</div>
         </a>
-        <a id="teme" href="">
+        <a id="teme" href="tema-10/home10.html">
             <div type="checkbox" class="home">Tema 10</div>
         </a>
         <a id="teme" href="">
