Home 12 bubble sort

--- a/tema-12/bubblesort.html
+++ b/tema-12/bubblesort.html
@@ -26,7 +26,8 @@
 
 <body>
     <div class="bubblesort">
-        
+        <div>The sorted array is listed on the console.log display. </div>
+        <div class="array" script='${ourArray}'></div>
     </div>
 </body>
 
