--- a/tema-11/calendar.html
+++ b/tema-11/calendar.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="calendar.css">
+    <link rel="stylesheet" href="modal.css">
     <link 
         rel="stylesheet" 
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
@@ -17,6 +18,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!--<script defer src="https://momentjs.com/downloads/moment.min.js"></script>-->
     <script defer src="calendar.js"></script>
+    <script defer src="modal.js"></script>
 
     <title>Tema 11</title>
 </head>
@@ -45,7 +47,7 @@
             <div class="days"></div>
         </div>
     </div>
-
+    <div class="popup">popup<button>X</button></div>
 </body>
 
 </html>
